--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,10 +6,26 @@ provisioner:
   name: shell
 
 platforms:
-- name: ubuntu-14.04
-#- name: centos-7.0
-suites:
- - name: default
+  - name: ubuntu-14.04
+  - name: ubuntu-16.04
+ ## Finally add support to RHEL platforms
+ #- name: centos-7.0
+
+ suites:
+
+ - name: master
    provisioner:
      script: tests/master-bootstrap.sh
 
+ - name: minion
+   provisioner:
+     script: tests/master-bootstrap.sh
+
+ ## ONCE MERGED and TODO.md impemented
+ #- name: default-master
+   #provisioner:
+     #script: tests/bootstrap.sh master -e xxx.env -e zzz.env
+
+ #- name: default-minion
+   #provisioner:
+     #script: tests/bootstrap.sh minion -e xxx.env -e zzz.env
