--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,19 +7,19 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
-  - name: ubuntu-16.04
+#  - name: ubuntu-16.04
  ## Finally add support to RHEL platforms
  #- name: centos-7.0
 
- suites:
+suites:
 
  - name: master
    provisioner:
      script: tests/master-bootstrap.sh
 
- - name: minion
-   provisioner:
-     script: tests/master-bootstrap.sh
+# - name: minion
+#  provisioner:
+#    script: tests/minion-bootstrap.sh
 
  ## ONCE MERGED and TODO.md impemented
  #- name: default-master
