--- a/env/salt.env
+++ b/env/salt.env
@@ -9,7 +9,7 @@ export CONFIG_HOST=${CONFIG_HOSTNAME}.${CONFIG_DOMAIN}
 # REPOSITORY
 export APT_REPOSITORY="deb [arch=amd64] http://apt.tcpcloud.eu/"
 export REPOSITORY_GPG=http://apt.tcpcloud.eu/public.gpg
-export REPOSITORY=$APT_REPOSITORY $REPOSITORY_VERSION $REPOSITORY_SYSTEM_VERSION
+export REPOSITORY="${APT_REPOSITORY}${REPOSITORY_VERSION} ${REPOSITORY_SYSTEM_VERSION}"
 export REPOSITORY_VERSION=nightly
 export REPOSITORY_SYSTEM_VERSION=trusty
 
@@ -25,3 +25,11 @@ export FORMULA_BRANCH=master
 
 # SALT
 export SALT_MASTER_HOST=192.168.0.4
+
+
+
+export CONFIG_HOST=${CONFIG_HOSTNAME}.${CONFIG_DOMAIN}
+
+export MINION_MASTER=$CONFIG_ADDRESS
+export MINION_HOSTNAME=minion
+export MINION_ID=${MINION_HOSTNAME}.${CONFIG_DOMAIN}
