--- a/env/openstack.env
+++ b/env/openstack.env
@@ -2,4 +2,4 @@ export OS_DISTRIBUTION=ubuntu
 export OS_NETWORKING=opencontrail
 export OS_VERSION=kilo
 export OS_DEPLOYMENT=single
-export OS_SYSTEM="${OS_VERSION} ${OS_DISTRIBUTION} ${OS_NETWORKING} ${OS_DEPLOYMENT}"
+export OS_SYSTEM="${OS_VERSION}_${OS_DISTRIBUTION}_${OS_NETWORKING}_${OS_DEPLOYMENT}"
