remove duplicate variables

--- a/env/salt.env
+++ b/env/salt.env
@@ -1,11 +1,3 @@
-export CONFIG_DOMAIN=company.local
-export FORMULA_SOURCE=pkg
-export RECLASS_ADDRESS=https://git.tcpcloud.eu/reclass-models/mall-prod-salt-model.git
-export CONFIG_ADDRESS=10.200.50.10
-export CONFIG_HOSTNAME=cfg01
-export MINION_HOSTNAME=min
-export CONFIG_HOST=${CONFIG_HOSTNAME}.${CONFIG_DOMAIN}
-
 # REPOSITORY
 export APT_REPOSITORY="deb [arch=amd64] http://apt.tcpcloud.eu/"
 export REPOSITORY_GPG=http://apt.tcpcloud.eu/public.gpg
@@ -17,19 +9,18 @@ export REPOSITORY_SYSTEM_VERSION=trusty
 export RECLASS_ADDRESS=https://github.com/tcpcloud/openstack-salt-model.git
 export RECLASS_BRANCH=master
 export RECLASS_SYSTEM=$OS_SYSTEM
+export CONFIG_DOMAIN=company.local
 
 # FORMULA
+export FORMULA_SOURCE=pkg
 export FORMULA_SOURCE=git
 export FORMULA_PATH="/usr/share/salt-formulas"
 export FORMULA_BRANCH=master
 
 # SALT
 export SALT_MASTER_HOST=192.168.0.4
-
-
-
+export MINION_MASTER=10.200.50.10
+export CONFIG_HOSTNAME=cfg01
+export MINION_HOSTNAME=min
 export CONFIG_HOST=${CONFIG_HOSTNAME}.${CONFIG_DOMAIN}
-
-export MINION_MASTER=$CONFIG_ADDRESS
-export MINION_HOSTNAME=minion
 export MINION_ID=${MINION_HOSTNAME}.${CONFIG_DOMAIN}
