--- a/env/salt.env
+++ b/env/salt.env
@@ -1,7 +1,7 @@
 # REPOSITORY
 export APT_REPOSITORY="deb [arch=amd64] http://apt.tcpcloud.eu/"
 export REPOSITORY_GPG=http://apt.tcpcloud.eu/public.gpg
-export REPOSITORY="${APT_REPOSITORY}${REPOSITORY_VERSION} ${REPOSITORY_SYSTEM_VERSION}"
+export REPOSITORY_APT="${APT_REPOSITORY}${REPOSITORY_VERSION} ${REPOSITORY_SYSTEM_VERSION}"
 export REPOSITORY_VERSION=nightly
 export REPOSITORY_SYSTEM_VERSION=trusty
 
