--- a/env/salt.env
+++ b/env/salt.env
@@ -1,26 +1,28 @@
+
+#APT_REPOSITORY_CODENM=trusty
+
 # REPOSITORY
-export APT_REPOSITORY="deb [arch=amd64] http://apt.tcpcloud.eu/"
-export REPOSITORY_GPG=http://apt.tcpcloud.eu/public.gpg
-export REPOSITORY_APT="${APT_REPOSITORY}${REPOSITORY_VERSION} ${REPOSITORY_SYSTEM_VERSION}"
-export REPOSITORY_VERSION=nightly
-export REPOSITORY_SYSTEM_VERSION=trusty
+export APT_REPOSITORY_URL="http://apt.tcpcloud.eu/"
+export APT_REPOSITORY_GPG="http://apt.tcpcloud.eu/public.gpg"
+export APT_REPOSITORY_TAGS="main security tcp-salt"
+APT_REPOSITORY="deb ${APT_REPOSITORY_URL}${APT_REPOSITORY_BRANCH:-nightly} ${APT_REPOSITORY_CODENM:-$(lsb_release -cs)} ${APT_REPOSITORY_TAGS:-main}"
 
 # RECLASS
-export RECLASS_ADDRESS=https://github.com/tcpcloud/openstack-salt-model.git
-export RECLASS_BRANCH=master
-export RECLASS_SYSTEM=$OS_SYSTEM
-export CONFIG_DOMAIN=company.local
+export RECLASS_ADDRESS=https://github.com/tcpcloud/openstack-salt-model.git # https/git
 
 # FORMULA
-export FORMULA_SOURCE=pkg
-export FORMULA_SOURCE=git
+export FORMULA_SOURCE=pkg # pkg/git
 export FORMULA_PATH="/usr/share/salt-formulas"
-export FORMULA_BRANCH=master
+export FORMULA_GIT_BRANCH=master
+export FORMULA_GIT_BASE_URL=https://github.com/tcpcloud
+
+# SYSTEM / HOST
+export HOSTNAME=cfg01
+export DOMAIN=company.local
 
 # SALT
-export SALT_MASTER_HOST=192.168.0.4
-export MINION_MASTER=10.200.50.10
-export CONFIG_HOSTNAME=cfg01
-export MINION_HOSTNAME=min
-export CONFIG_HOST=${CONFIG_HOSTNAME}.${CONFIG_DOMAIN}
-export MINION_ID=${MINION_HOSTNAME}.${CONFIG_DOMAIN}
+export SALT_MASTER=192.168.0.4 # ip or fqdn
+export MINION_ID=${HOSTNAME}.${DOMAIN}
+
+
+
