--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,19 +1,25 @@
 ---
 driver:
   name: docker
+  use_sudo: true
+
 provisioner:
   name: shell
+  use_sudo: true
 
 platforms:
-  - name: ubuntu-16.04
+  - name: ubuntu-14.04
     driver:
       name: docker
       volume:
         - <%= ENV['PWD'] %>:/tmp/kitchen
-      #provision_command:
-      #  - apt-get update
 
-#  - name: ubuntu-16.04
+  #- name: ubuntu-16.04
+    #driver:
+      #name: docker
+      #volume:
+        #- <%= ENV['PWD'] %>:/tmp/kitchen
+
  ## Finally add support to RHEL platforms
  #- name: centos-7.0
 
@@ -25,9 +31,9 @@ verifier:
 suites:
 
  - name: master
-   #provisioner:
-   #  script: tests/bootstrap.sh master
+   provisioner:
+     script: test/setup.sh
 
  - name: minion
-   #provisioner:
-   #  script: tests/bootstrap.sh minion
+   provisioner:
+     script: test/setup.sh
