--- a/env/salt.env
+++ b/env/salt.env
@@ -2,27 +2,27 @@
 #APT_REPOSITORY_CODENM=trusty
 
 # REPOSITORY
-APT_REPOSITORY_URL=${APT_REPOSITORY:-http://apt.tcpcloud.eu/}
-APT_REPOSITORY_GPG=${APT_REPOSITORY_GPG:-http://apt.tcpcloud.eu/public.gpg}
-APT_REPOSITORY_TAGS=${APT_REPOSITORY_TAGS:-main security tcp-salt}
-APT_REPOSITORY="deb ${APT_REPOSITORY_URL}${APT_REPOSITORY_BRANCH:-nightly} ${APT_REPOSITORY_CODENM:-$(lsb_release -cs)} ${APT_REPOSITORY_TAGS:-main}"
+export APT_REPOSITORY_URL=${APT_REPOSITORY_URL:-http://apt.tcpcloud.eu/}
+export APT_REPOSITORY_GPG=${APT_REPOSITORY_GPG:-http://apt.tcpcloud.eu/public.gpg}
+export APT_REPOSITORY_TAGS=${APT_REPOSITORY_TAGS:-main security tcp-salt}
+export APT_REPOSITORY="deb ${APT_REPOSITORY_URL}${APT_REPOSITORY_BRANCH:-nightly} ${APT_REPOSITORY_CODENM:-$(lsb_release -cs)} ${APT_REPOSITORY_TAGS:-main}"
 
 # RECLASS
-RECLASS_ADDRESS=${RECLASS_ADDRESS:-https://github.com/tcpcloud/openstack-salt-model.git} # https/git
+export RECLASS_ADDRESS=${RECLASS_ADDRESS:-https://github.com/tcpcloud/openstack-salt-model.git} # https/git
 
 # FORMULA
-FORMULA_SOURCE=${FORMULA_SOURCE:-pkg} # pkg/git
-FORMULA_PATH=${FORMULA_PATH:-/usr/share/salt-formulas}
-FORMULA_GIT_BRANCH=${FORMULA_GIT_BRANCH:-master}
-FORMULA_GIT_BASE_URL=${FORMULA_GIT_BASE_URL:-https://github.com/tcpcloud}
+export FORMULA_SOURCE=${FORMULA_SOURCE:-pkg} # pkg/git
+export FORMULA_PATH=${FORMULA_PATH:-/usr/share/salt-formulas}
+export FORMULA_GIT_BRANCH=${FORMULA_GIT_BRANCH:-master}
+export FORMULA_GIT_BASE_URL=${FORMULA_GIT_BASE_URL:-https://github.com/tcpcloud}
 
 # SYSTEM / HOST
-HOSTNAME=${HOSTNME:-cfg01}
-DOMAIN=${DOMAIN:-company.local}
+export HOSTNAME=${HOSTNME:-cfg01}
+export DOMAIN=${DOMAIN:-company.local}
 
 # SALT
-SALT_MASTER=${SALT_MASTER:-192.168.0.4} # ip or fqdn
-MINION_ID=${MINION_ID:-${HOSTNAME}.${DOMAIN}}
+export SALT_MASTER=${SALT_MASTER:-192.168.0.4} # ip or fqdn
+export MINION_ID=${MINION_ID:-${HOSTNAME}.${DOMAIN}}
 
 
 
