--- a/env/salt.env
+++ b/env/salt.env
@@ -4,7 +4,7 @@
 # REPOSITORY
 export APT_REPOSITORY_URL=${APT_REPOSITORY_URL:-http://apt.tcpcloud.eu/}
 export APT_REPOSITORY_GPG=${APT_REPOSITORY_GPG:-http://apt.tcpcloud.eu/public.gpg}
-export APT_REPOSITORY_TAGS=${APT_REPOSITORY_TAGS:-main security tcp-salt}
+export APT_REPOSITORY_TAGS=${APT_REPOSITORY_TAGS:-main extra tcp-salt}
 export APT_REPOSITORY="deb [arch=amd64] ${APT_REPOSITORY_URL}${APT_REPOSITORY_BRANCH:-nightly} ${APT_REPOSITORY_CODENM:-$(lsb_release -cs)} ${APT_REPOSITORY_TAGS:-main}"
 
 # RECLASS
