--- a/env/salt.env
+++ b/env/salt.env
@@ -4,24 +4,21 @@
 # REPOSITORY
 export APT_REPOSITORY_URL=${APT_REPOSITORY_URL:-http://apt.tcpcloud.eu/}
 export APT_REPOSITORY_GPG=${APT_REPOSITORY_GPG:-http://apt.tcpcloud.eu/public.gpg}
-export APT_REPOSITORY_TAGS=${APT_REPOSITORY_TAGS:-main extra tcp-salt}
+export APT_REPOSITORY_TAGS=${APT_REPOSITORY_TAGS:-main tcp tcp-salt}
 export APT_REPOSITORY="deb [arch=amd64] ${APT_REPOSITORY_URL}${APT_REPOSITORY_BRANCH:-nightly} ${APT_REPOSITORY_CODENM:-$(lsb_release -cs)} ${APT_REPOSITORY_TAGS:-main}"
 
 # RECLASS
-export RECLASS_ADDRESS=${RECLASS_ADDRESS:-https://github.com/tcpcloud/openstack-salt-model.git} # https/git
+export RECLASS_ADDRESS=${RECLASS_ADDRESS:-https://github.com/Mirantis/mk-lab-salt-model.git} # https/git
 
 # FORMULA
 export FORMULA_SOURCE=${FORMULA_SOURCE:-pkg} # pkg/git
-export FORMULA_PATH=${FORMULA_PATH:-/usr/share/salt-formulas}
-export FORMULA_GIT_BRANCH=${FORMULA_GIT_BRANCH:-master}
-export FORMULA_GIT_BASE_URL=${FORMULA_GIT_BASE_URL:-https://github.com/tcpcloud}
 
 # SYSTEM / HOST
 export HOSTNAME=${HOSTNME:-cfg01}
-export DOMAIN=${DOMAIN:-company.local}
+export DOMAIN=${DOMAIN:-bootstrap.local}
 
 # SALT
-export SALT_MASTER=${SALT_MASTER:-192.168.0.4} # ip or fqdn
+export SALT_MASTER=${SALT_MASTER:-127.0.0.1} # ip or fqdn
 export MINION_ID=${MINION_ID:-${HOSTNAME}.${DOMAIN}}
 
 
